--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,10 @@
     nav ul li a{
         font-size: 12px;
     }
+
+     #title {
+        font-size: 25px;
+     }
   
     .img-div {
       flex-direction: column;
@@ -204,11 +208,20 @@
   
     .img-div p {
       margin-left: 50px;
+      font-size: 18px;
     }
+
+     h1 {
+        font-size: 25px;
+     }
   
     .tribute-info {
       padding-left: 20px;
       padding-right: 20px;
+    }
+
+    .tribute-info ul li {
+      font-size: 18px;
     }
   
     footer {
@@ -221,6 +234,7 @@
       margin: 0;
       padding-top: 20px;
       line-height: 20px;
+      font-size: 18px;
     }
   
     footer img {
